--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-current-bg colour155
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
 
@@ -32,12 +32,16 @@ set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
+# Net speed plugin
+set -g @net_speed_interfaces "wlp3s0"
+set -g @net_speed_format "D:%10s U:%10s"
+
 set -g status-interval 1
 set -g status-justify centre # center align window list
-set -g status-left-length 20
-set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]•#[fg=colour155,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",")'
-set -g status-right '#(tmux-mem-cpu-load --colors -a 1) #[fg=black]• #[fg=colour85,bg=default]%a%l:%M:%S %p#[default]#[fg=black]• #[fg=colour39]%Y-%m-%d'
+set -g status-left-length 64
+set -g status-right-length 64
+set -g status-left ' #(tmux-mem-cpu-load --colors -g 0 -a 1) #[default]#[fg=black]• #[fg=colour123]#{net_speed}#[default]'
+set -g status-right '#[fg=green]#H #[fg=black]• #[fg=colour155,dim,bg=default]#(uptime | sed "s/,//g" | cut -f 4-5 -d " ")#[fg=black] • #[fg=colour39]%Y-%m-%d %a #[default]#[fg=black]'
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -60,7 +64,7 @@ bind-key a send-prefix
 
 # Activity monitoring
 setw -g monitor-activity on
-set -g visual-activity on
+set -g visual-activity off
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -73,13 +77,13 @@ bind m run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-horizontal -p 66"
 # Same thing for verical layouts
 bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
-bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+#bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # auto window rename
-set-window-option -g automatic-rename
+#set-window-option -g automatic-rename
 
 # color
 #set -g default-terminal "tmux-256color"
@@ -89,8 +93,8 @@ set -g default-terminal "screen-256color"
 # Updates for tmux 1.9's current pane splitting paths.
 
 # from powerline
-run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+#run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+#run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -105,10 +109,10 @@ if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'se
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
 
 # fix pane_current_path on new window and splits
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
+#if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
+#if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" "unbind '\"'; bind '\"' split-indow -v -c '#{pane_current_path}'"
+#if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
+#if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -118,6 +122,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Installed already
 #set -g @plugin 'thewtex/tmux-mem-cpu-load'
