--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-bg colour155
+set-window-option -g window-status-current-bg white
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
 
@@ -21,8 +21,8 @@ set-option -g pane-border-fg green #base02
 set-option -g pane-active-border-fg green #base01
 
 # pane default text color
-set-option -g window-style 'fg=colour22,bg=colour233'
-set-option -g window-active-style 'fg=green,bg=black'
+set-option -g window-style 'fg=colour22,bg=colour235'
+set-option -g window-active-style 'fg=colour28,bg=colour232'
 
 # message text
 set-option -g message-bg colour235 #base02
@@ -32,16 +32,12 @@ set-option -g message-fg colour166 #orange
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
 
-# Net speed plugin
-set -g @net_speed_interfaces "wlp3s0"
-set -g @net_speed_format "D:%10s U:%10s"
-
 set -g status-interval 1
 set -g status-justify centre # center align window list
-set -g status-left-length 64
-set -g status-right-length 64
-set -g status-left ' #(tmux-mem-cpu-load --colors -g 0 -a 1) #[default]#[fg=black]• #[fg=colour123]#{net_speed}#[default]'
-set -g status-right '#[fg=green]#H #[fg=black]• #[fg=colour155,dim,bg=default]#(uptime | sed "s/,//g" | cut -f 4-5 -d " ")#[fg=black] • #[fg=colour39]%Y-%m-%d %a #[default]#[fg=black]'
+set -g status-left-length 50
+set -g status-right-length 140
+set -g status-left '#S #[fg=black]• #[fg=green]#H #[fg=black]• #[fg=colour155,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",")'
+set -g status-right '#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -a 1 --colors -g 5) #[fg=black]• #[fg=colour85,bg=default]%H:%M:%S %p#[default]#[fg=black]• #[fg=colour39]%a %Y-%m-%d'
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -64,7 +60,7 @@ bind-key a send-prefix
 
 # Activity monitoring
 setw -g monitor-activity on
-set -g visual-activity off
+set -g visual-activity on
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -77,13 +73,20 @@ bind m run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-horizontal -p 66"
 # Same thing for verical layouts
 bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
-#bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
+# Remote clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # auto window rename
-#set-window-option -g automatic-rename
+set-window-option -g automatic-rename
+
+# Use mouse to click in tmux
+set -g mouse off
+#set -g mouse on
 
 # color
 #set -g default-terminal "tmux-256color"
@@ -93,13 +96,13 @@ set -g default-terminal "screen-256color"
 # Updates for tmux 1.9's current pane splitting paths.
 
 # from powerline
-#run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-#run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
+#if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
+#if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
 
 # status bar
 if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
@@ -122,7 +125,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 # Installed already
 #set -g @plugin 'thewtex/tmux-mem-cpu-load'
